--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="content">
         <h1>Amazing Article</h1>
-        <small>John Doe</small>
+        <small>Eswar Ala</small>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
           repellendus nostrum harum, quis cupiditate molestiae, voluptates quam
