--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           non inventore eaque optio dolores accusantium similique repudiandae
           alias temporibus quae sequi quam quia sapiente! Dignissimos esse
           possimus numquam laborum nemo minus, sequi doloribus porro quia,
-          fugiat aperiam optio dolores? Nemo quia adipisci reiciendis provident?
+          pisci reiciendis provident?
           Architecto molestias qui a ut placeat, dolorum similique fuga facilis
           modi suscipit perferendis blanditiis temporibus iusto repudiandae
-          ipsam officiis.
+
         </p>
         <h2>My Subtitle</h2>
         <img
