--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
           repellendus nostrum harum, quis cupiditate molestiae, voluptates quam
           beatae odit autem incidunt voluptatibus? Provident, suscipit. Iusto
-          facere dolorum quis asperiores illo earum vel sit modi dicta nulla?
-          Est, odio quibusdam quidem earum magni et placeat voluptate officia
+um quis asperiores illo earum vel sit modi dicta nulla?
+usdam quidem earum magni et placeat voluptate officia
           non inventore eaque optio dolores accusantium similique repudiandae
           alias temporibus quae sequi quam quia sapiente! Dignissimos esse
           possimus numquam laborum nemo minus, sequi doloribus porro quia,
