--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           beatae odit autem incidunt voluptatibus? Provident, suscipit. Iusto
 um quis asperiores illo earum vel sit modi dicta nulla?
 usdam quidem earum magni et placeat voluptate officia
-          non inventore eaque optio dolores accusantium similique repudiandae
+ eaque optio dolores accusantium similique repudiandae
           alias temporibus quae sequi quam quia sapiente! Dignissimos esse
           possimus numquam laborum nemo minus, sequi doloribus porro quia,
           pisci reiciendis provident?
