--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ usdam quidem earum magni et placeat voluptate officia
  eaque optio dolores accusantium similique repudiandae
           alias temporibus quae sequi quam quia sapiente! Dignissimos esse
           possimus numquam laborum nemo minus, sequi doloribus porro quia,
-          pisci reiciendis provident?
+iendis provident?
           Architecto molestias qui a ut placeat, dolorum similique fuga facilis
           modi suscipit perferendis blanditiis temporibus iusto repudiandae
 
