--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           repellendus nostrum harum, quis cupiditate molestiae, voluptates quam
           beatae odit autem incidunt voluptatibus? Provident, suscipit. Iusto
 um quis asperiores illo earum vel sit modi dicta nulla?
-usdam quidem earum magni et placeat voluptate officia
+t placeat voluptate officia
  eaque optio dolores accusantium similique repudiandae
           alias temporibus quae sequi quam quia sapiente! Dignissimos esse
           possimus numquam laborum nemo minus, sequi doloribus porro quia,
